# ArctorusOld

./: .clang-sanitizer  .gitignore  CMakeLists.txt  README.md
res/bash/: unix.sh
res/python/: intensity.py  plot.py  radial.py  radial_v2.py
res/shaders/: ambient.frag  ambient.geom  ambient.vert  diffuse.frag  diffuse.vert  normal.frag  normal.geom  normal.vert  photon.frag  photon.geom  photon.vert  skybox.frag  skybox.geom  skybox.vert
res/shaders/ambient/: ambient.vert  fragment.frag  vertex.vert
res/shaders/diffuse/: fragment.frag  vertex.vert
res/shaders/normal/: fragment.frag  geometry.geom  normal.vert  vertex.vert
res/shaders/path/: fragment.frag  photon.frag  vertex.vert
res/shaders/skybox/: fragment.frag  vertex.vert
src/: main.cpp
src/cls/app/: gui.cpp  gui.hpp
src/cls/data/: column.cpp  column.hpp  dynamicHistogram.cpp  dynamicHistogram.hpp  histogram.cpp  histogram.hpp  image.cpp  image.hpp  json.cpp  json.hpp  table.cpp  table.hpp
src/cls/detector/: benchmark.cpp  benchmark.hpp  ccd.cpp  ccd.hpp  spectrometer.cpp  spectrometer.hpp
src/cls/equip/: entity.cpp  entity.hpp  light.cpp  light.hpp
src/cls/equipment/: entity.cpp  entity.hpp
src/cls/file/: handle.cpp  handle.hpp  handler.hpp
src/cls/geom/: mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp  vertex.cpp  vertex.hpp
src/cls/graphical/: camera.cpp  camera.hpp  point.cpp  point.hpp  prop.cpp  prop.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  vertex.cpp  vertex.hpp
src/cls/graphical/camera/: fly.cpp  fly.hpp  orbit.cpp  orbit.hpp
src/cls/graphical/data/: photon.cpp  photon.hpp  point.cpp  point.hpp
src/cls/graphical/point/: photon.cpp  photon.hpp
src/cls/graphical/prop/: light.cpp  light.hpp
src/cls/graphical/shader/: ambient.cpp  ambient.hpp  diffuse.cpp  diffuse.hpp  normal.cpp  normal.hpp  path.cpp  path.hpp  photon.cpp  photon.hpp  skybox.cpp  skybox.hpp
src/cls/interpolator/: linear.cpp  linear.hpp
src/cls/math/: mat.cpp  mat.hpp  vec.cpp  vec.hpp  vec3.hpp
src/cls/mesh/: cell.cpp  cell.hpp  grid.cpp  grid.hpp
src/cls/parser/: json.cpp  json.hpp
src/cls/phys/: material.cpp  material.hpp  particle.cpp  particle.hpp  photon.cpp  photon.hpp  spectrum.cpp  spectrum.hpp
src/cls/phys/particle/: photon.cpp  photon.hpp
src/cls/random/: index.cpp  index.hpp  linear.cpp  linear.hpp  step.cpp  step.hpp  uniform.cpp  uniform.hpp
src/cls/reader/: json.cpp  json.hpp
src/cls/setup/: equip.cpp  equip.hpp  light.cpp  light.hpp  sim.cpp  sim.hpp
src/cls/sim/: entity_list.cpp  entity_list.hpp  light_list.cpp  light_list.hpp
src/cls/term/: logger.cpp  logger.hpp
src/cls/tree/: cell.cpp  cell.hpp  grid.cpp  grid.hpp
src/lib/: nlohmann.hpp  stb_image.h
src/utl/: array.hpp  colourmap.cpp  colourmap.hpp  conversion.cpp  conversion.hpp  file.cpp  file.hpp  stream.hpp  string.cpp  string.hpp  vector.hpp
test/: parameters.json  test.json
